c4prj1_deck/grade.txt
Grading at Sat Aug  3 06:16:51 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:55:4: error: request for member ‘value’ in something not a structure or union
  cc.value = c.value;
    ^
deck.c:56:4: error: request for member ‘suit’ in something not a structure or union
  cc.suit = c.suit;
    ^
Compilation of deck.c failed

Overall Grade: F
